--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <footer>
-    Made by Sneha Mittal, Sarika Kushwaha, Samiksha Bhatnagar.
+    Made with ❤️ by Sneha Mittal, Sarika Kushwaha, Samiksha Bhatnagar.
   </footer>
 
   <script src="index.js" charset="utf-8"></script>
